🎊🎥 Updated with Glitch

--- a/client/index.html
+++ b/client/index.html
@@ -215,7 +215,7 @@ limitations under the License.
         </ul>
       </details>
       
-      <details>
+      <details hidden>
         <summary><b>Known issues</b></summary>
         <ul>
           <li>When you unmute the melody/drums, they won't actually audibly start up until the next 2-bar chunk</li>
