--- a/client/index.html
+++ b/client/index.html
@@ -212,7 +212,7 @@ limitations under the License.
           <li>All of the machine learning code happens in the background, on a Node server, so that your realtime
           audio is never interrupted</li>
           <li>You can read more about how the model was trained on the <a href="https://magenta.tensorflow.org/groovae">Magenta blog</a>,
-            or see the code for this app on <a href="">GitHub</a></li>
+            or see the code for this app on <a href="https://github.com/magenta/drumbot">GitHub</a></li>
         </ul>
       </details>
 
